partially fixed navbar on mobile breakpoint

--- a/wwwroot/scss/mixins/_clearfix.scss
+++ b/wwwroot/scss/mixins/_clearfix.scss
@@ -1,10 +1,7 @@
 @mixin clearfix() {
-  &:before,
-  &:after {
-    content: " "; // 1
-    display: table; // 2
-  }
-  &:after {
+  &::after {
+    display: block;
     clear: both;
+    content: "";
   }
 }
